<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.iclaude.scheduledrecorder.utils.Utils" />

        <variable
            name="viewModel"
            type="com.iclaude.scheduledrecorder.ui.fragments.record.RecordViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_record"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/expanded_vertical_margin"
            android:enabled="@{viewModel.serviceConnected ? true : false}"
            android:src="@{viewModel.serviceConnected &amp;&amp; viewModel.serviceRecording ? @drawable/ic_media_stop : @drawable/ic_mic_white_36dp}"
            app:backgroundTint="@color/primary"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:src="@drawable/ic_mic_white_36dp" />

        <TextView
            android:id="@+id/tvChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:layout_marginTop="@dimen/expanded_vertical_margin"
            android:fontFamily="sans-serif-light"
            android:text="@{Utils.formatSecondsElapsedForChronometer(viewModel.secondsElapsed)}"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/filerecord_chrono_textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00" />

        <Button
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:drawableStart="@drawable/ic_media_pause"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/pause_recording_button"
            android:textAllCaps="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/recording_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/expanded_vertical_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@{viewModel.serviceConnected &amp;&amp; viewModel.serviceRecording ? @string/record_in_progress : @string/record_prompt}"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnRecord"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/record_prompt" />


        <!-- Audio visualizer -->
        <com.iclaude.scheduledrecorder.ui.fragments.record.AudioLevelView
            android:id="@+id/audio_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginTop="@dimen/expanded_vertical_margin"
            android:padding="@dimen/default_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChronometer" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/expanded_horizontal_margin"
            android:layout_marginTop="8dp"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvChronometer"
            app:layout_constraintEnd_toStartOf="@+id/tvChronometer"
            app:layout_constraintTop_toTopOf="@+id/tvChronometer"
            android:text="@string/record_elapsed" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation_view"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audio_view"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/dotted_loader" />

    </android.support.constraint.ConstraintLayout>

</layout>