...
        android:id="@+id/fragment_file_viewer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context="com.iclaude.scheduledrecorder.ui.fragments.fileviewer.FileViewerFragment">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/fileviewer_horizontal_margin"
            android:layout_marginEnd="@dimen/fileviewer_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
