...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvRecordings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/default_vertical_margin"
                android:layout_marginTop="@dimen/default_vertical_margin"
                tools:listitem="@layout/fragment_scheduled_recordings_item" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/expanded_vertical_margin"
                android:layout_marginEnd="@dimen/expanded_horizontal_margin"
                android:onClick="@{() -> viewModel.addScheduledRecording()}"
...
